--- a/index.html
+++ b/index.html
@@ -32,11 +32,17 @@
     <link rel="preload" href="images/hg-9.png" as="image"/>
     <link rel="preload" href="images/hg-10.png" as="image"/>
     <link rel="preload" href="images/hg-win.png" as="image"/>
+    <link rel="preload" href="images/streak.png" as="image"/>
     <title>Hangman Game</title>
   </head>
   <body>
     <div id="app">
-      <div>
+      <div class="w-full absolute top-0 left-0 flex justify-between">
+        <div id="streak-wrapper" class="absolute left-6 pt-3 flex justify-between items-center">
+          <p id="winstreak-counter" class="text-2xl font-bold pr-2 pt-2"></p>
+          <img id="streak-image" src="images/streak.png" alt="winstreak image" class="w-8">
+        </div>
+      
         <div class="absolute top-6 right-6">
           <label class="inline-flex items-center cursor-pointer">
             <input
@@ -48,10 +54,9 @@
             <div
               class="relative w-11 h-6 bg-gray-200 peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-blue-300 dark:peer-focus:ring-blue-800 rounded-full peer dark:bg-gray-700 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all dark:border-gray-600 peer-checked:bg-indigo-500 dark:peer-checked:bg-indigo-500"
             ></div>
-            <span
-              class="ms-3 text-sm font-medium text-gray-900 dark:text-gray-300"
-              >Dark mode</span
-            >
+            <span class="ms-3 text-sm font-medium text-gray-900 dark:text-gray-300">
+              Dark mode
+            </span>
           </label>
         </div>
       </div>
